issue: about middle name still isnt visible

--- a/src/pages/styles/about.css
+++ b/src/pages/styles/about.css
@@ -75,7 +75,7 @@
     margin-bottom: 1rem;
   }
   .profile-middle-name {
-    color: #8ee62b;
+    color: #6ea82c;
     margin-right: 0.25rem;
   }
 
